--- a/404.html
+++ b/404.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: "404: Page not found"
+title: "404: Pagina non trovata"
 permalink: /404.html
 ---
 
 <h1 class="title">404</h1>
+Pagina non trovata
