--- a/_2019/index.html
+++ b/_2019/index.html
@@ -1,58 +1,59 @@
 ---
 layout: page
-title: "2019 Lectures"
+title: "Lezioni del 2019"
 permalink: /2019/
 ---
 
-<p>Click on specific topics below to see lecture videos and lecture notes.</p>
+<p>Clicca su un argomento qua sotto per vedere i video e le note delle
+lezioni.</p>
 
-<h1>Tuesday, 1/15</h1>
+<h1>Martedì, 15/1</h1>
 <ul>
-  <li><a href="/2019/course-overview/">Course overview</a></li>
-  <li><a href="/2019/virtual-machines/">Virtual machines and containers</a></li>
-  <li><a href="/2019/shell/">Shell and scripting</a></li>
+  <li><a href="/2019/course-overview/">Panoramica del corso</a></li>
+  <li><a href="/2019/virtual-machines/">Macchine virtuali e container</a></li>
+  <li><a href="/2019/shell/">Shell e script</a></li>
 </ul>
 
-<h1>Thursday, 1/17</h1>
+<h1>Giovedì, 17/1</h1>
 <ul>
-  <li><a href="/2019/command-line/">Command-line environment</a></li>
-  <li><a href="/2019/data-wrangling/">Data wrangling</a></li>
+  <li><a href="/2019/command-line/">Ambiente della linea di comando</a></li>
+  <li><a href="/2019/data-wrangling/">Manipolazione dei dati</a></li>
 </ul>
 
-<h1>Tuesday, 1/22</h1>
+<h1>Martedì, 22/1</h1>
 <ul>
-  <li><a href="/2019/editors/">Editors</a></li>
-  <li><a href="/2019/version-control/">Version control</a></li>
+  <li><a href="/2019/editors/">Editor di testo</a></li>
+  <li><a href="/2019/version-control/">Sistemi di controllo della versione</a></li>
 </ul>
 
-<h1>Thursday, 1/24</h1>
+<h1>Giovedì, 24/1</h1>
 <ul>
   <li><a href="/2019/dotfiles/">Dotfiles</a></li>
-  <li><a href="/2019/backups/">Backups</a></li>
-  <li><a href="/2019/automation/">Automation</a></li>
-  <li><a href="/2019/machine-introspection/">Machine introspection</a></li>
+  <li><a href="/2019/backups/">Backup</a></li>
+  <li><a href="/2019/automation/">Automazioni</a></li>
+  <li><a href="/2019/machine-introspection/">Analisi della macchina</a></li>
 </ul>
 
-<h1>Tuesday, 1/29</h1>
+<h1>Martedì, 29/1</h1>
 <ul>
-  <li><a href="/2019/program-introspection/">Program introspection</a></li>
-  <li><a href="/2019/package-management/">Package/dependency management</a></li>
-  <li><a href="/2019/os-customization/">OS customization</a></li>
-  <li><a href="/2019/remote-machines/">Remote machines</a></li>
+  <li><a href="/2019/program-introspection/">Analisi dei programmi</a></li>
+  <li><a href="/2019/package-management/">Gestione di pacchetti e dipendenze</a></li>
+  <li><a href="/2019/os-customization/">Personalizzare il sistema operativo</a></li>
+  <li><a href="/2019/remote-machines/">macchine remote</a></li>
 </ul>
 
-<h1>Thursday, 1/31</h1>
+<h1>Giovedì, 31/1</h1>
 <ul>
-  <li><a href="/2019/web/">Web and browsers</a></li>
-  <li><a href="/2019/security/">Security and privacy</a></li>
+  <li><a href="/2019/web/">Web e browser</a></li>
+  <li><a href="/2019/security/">Sicurezza e privacy</a></li>
 </ul>
 
 <hr>
 
-<h1>Discussion</h1>
+<h1>Discussione</h1>
 
-<p>We've also shared this class beyond MIT in the hopes that others may
-benefit from these resources. You can find posts and discussion on</p>
+<p>Abbiamo condiviso questo corso al di fuori del MIT nella speranza possa
+essere utile anche ad altri. Puoi trovare post e discussioni su:</p>
 
 <ul>
   <li><a href="https://news.ycombinator.com/item?id=19078281">Hacker News</a></li>
