--- a/_2020/index.html
+++ b/_2020/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "2020 Lectures"
+title: "Lezioni del 2020"
 permalink: /2020/
 phony: true
 excerpt: '' # work around a bug
@@ -11,7 +11,7 @@ excerpt: '' # work around a bug
   {% for lecture in lectures %}
     {% if lecture.phony != true %}
       <li>
-        <strong>{{ lecture.date | date: '%-m/%d' }}</strong>:
+        <strong>{{ lecture.date | date: '%d/%m' }}</strong>:
         {% if lecture.ready %}
           <a href="{{ lecture.url }}">{{ lecture.title }}</a>
         {% elsif lecture.noclass %}
@@ -28,8 +28,12 @@ excerpt: '' # work around a bug
   {% endfor %}
 </ul>
 
-Video recordings of the lectures are available <a href="https://www.youtube.com/playlist?list=PLyzOVJj3bHQuloKGG59rS43e29ro7I57J">on YouTube</a>.
+Le videoregistrazioni delle lezioni sono disponibili <a href="https://www.youtube.com/playlist?list=PLyzOVJj3bHQuloKGG59rS43e29ro7I57J">su YouTube</a>.
 
-<h2>Previous year's lectures</h2>
+<h2>Lezioni dell'anno precedente</h2>
 
-<p>You can find lecture notes and videos from <a href="/2019/">last year's version of this class</a>. Each year's lectures are fully self-contained, and we recommend following the most recent version of the material (i.e. the 2020 lectures). There is slight variation in the topics covered, so we continue to host notes and videos for earlier versions of this course.</p>
+<p>Puoi vedere le note e i video delle <a href="/2019/">lezioni dell'anno
+scorso</a>. Le lezioni di ogni anno sono complete e raccomandiamo di seguire
+quelle più recenti (2020). Ci sono delle piccole variazioni degli argomenti
+trattati, e per questo continuiamo a rendere disponibili le lezioni delle
+edizioni passate.</p>
